objects/manRoot__c.object
<CustomObject>
    <fields>
        <fullName>manPar10__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>manPar 10</label>
        <referenceTo>manPar10__c</referenceTo>
        <relationshipLabel>manPar 10</relationshipLabel>
        <relationshipName>manPar10</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>manPar11__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>manPar 11</label>
        <referenceTo>manPar11__c</referenceTo>
        <relationshipLabel>manPar 11</relationshipLabel>
        <relationshipName>manPar11</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>manPar12__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>manPar 12</label>
        <referenceTo>manPar12__c</referenceTo>
        <relationshipLabel>manPar 12</relationshipLabel>
        <relationshipName>manPar12</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>manRoot</label>
    <nameField>
        <label>manRoot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>manRoots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>